WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259857
makeOpportunisticTaskDeferralScopeIfPossible has a wrong early exit logic
https://bugs.webkit.org/show_bug.cgi?id=259857
Summary
makeOpportunisticTaskDeferralScopeIfPossible has a wrong early exit logic
Ryosuke Niwa
Reported
2023-08-04 23:41:47 PDT
makeOpportunisticTaskDeferralScopeIfPossible exits early whenever m_currentTimerInterval <= 1ms. But we should be exiting early whenever m_currentTimerInterval > 1ms instead.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2023-08-04 23:45:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16420
Radar WebKit Bug Importer
Comment 2
2023-08-05 17:03:39 PDT
<
rdar://problem/113450386
>
EWS
Comment 3
2023-08-05 20:38:14 PDT
Committed
266621@main
(38e5de251688): <
https://commits.webkit.org/266621@main
> Reviewed commits have been landed. Closing PR #16420 and removing active labels.
WebKit Commit Bot
Comment 4
2023-08-06 14:12:13 PDT
Re-opened since this is blocked by
bug 259876
Ryosuke Niwa
Comment 5
2023-08-07 21:00:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16464
EWS
Comment 6
2023-08-08 01:07:44 PDT
Committed
266680@main
(e9d28ce63fa4): <
https://commits.webkit.org/266680@main
> Reviewed commits have been landed. Closing PR #16464 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug