makeOpportunisticTaskDeferralScopeIfPossible has a wrong early exit logic https://bugs.webkit.org/show_bug.cgi?id=259857

Reviewed by Yusuke Suzuki and Wenson Hsieh.

We want to defer opportunistic task whenever we have a timer firing in the next 1ms,
not whenever we have a timer firing in 1ms or later.

* Source/WebCore/page/DOMTimer.cpp:
(WebCore::DOMTimer::makeOpportunisticTaskDeferralScopeIfPossible):

Canonical link: https://commits.webkit.org/266621@main